--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^4",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2"
   },
   "devDependencies": {
     "@types/react": "17.0.31",
