--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-draggable": "^4.4.4",
     "react-dropzone": "^11.4.2"
   },
   "devDependencies": {
