--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@chakra-ui/react": "^1.6.10",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "downloadjs": "^1.4.7",
     "framer-motion": "^4",
+    "html-to-image": "^1.9.0",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -20,6 +22,7 @@
     "react-dropzone": "^11.4.2"
   },
   "devDependencies": {
+    "@types/downloadjs": "^1.4.2",
     "@types/react": "17.0.31",
     "eslint": "8.1.0",
     "eslint-config-next": "11.1.2",
